# ColorWheelHSV

./: .gitignore  CMakeLists.txt  ColorWheelHSV.cpp  ColorWheelHSV.iss  ColorWheelHSV.sln  ColorWheelHSV.vcxproj  ImageUtils.cpp  Makefile  README.md  VersionNo.h  bootstrap.sh  resource.h  user_macros.props
res/: ColorWheelHSV.rc  ColorWheelHSV.rc2
src/: ColorWheelHSV.cpp
